# iot_visualizer

./: .env  .env.example  .gitignore  README.md  pyproject.toml
docs/database/: erd.drawio
iot_visualizer/: iot_visualizer.py
iot_visualizer/modules/device/dto/: CreateAttributeDTO.py  UpdateAttributeDTO.py  UpdateDeviceDTO.py
iot_visualizer/modules/device/dto/attribute/: CreateAttributeDTO.py  UpdateAttributeDTO.py
iot_visualizer/modules/device/dto/device/: CreateDeviceDTO.py  UpdateDeviceDTO.py
iot_visualizer/modules/device/dto/reading/: CreateReadingDTO.py  UpdateReadingDTO.py
iot_visualizer/modules/device/repositories/: IAttributeRepository.py  IDeviceRepository.py  IReadingRepository.py
iot_visualizer/modules/device/service/reading/: CreateReadingService.py  CreateReadingsService.py
iot_visualizer/modules/device/type/: attribute_type.py
iot_visualizer/modules/device/utils/: is_reading_value_valid.py
iot_visualizer/modules/shared/infra/http/: app.py
iot_visualizer/modules/shared/infra/sqlalchemy/: create_tables.py  db_engine.py
iot_visualizer/modules/shared/providers/Auth/: BasicAuth.py
iot_visualizer/modules/shared/providers/Token/: DeviceSecret.py
iot_visualizer/modules/shared/utils/: AppError.py  DBConfig.py  update_instance_attributes.py
iot_visualizer/modules/user/services/attribute/: CreateAttributeService.py  DeleteAttributeService.py  ListAttributeService.py  RemoveAttributeService.py  ShowAttributeService.py  UpdateAttributeService.py
iot_visualizer/modules/user/services/device/: CreateDeviceService.py  DeleteDeviceService.py  (+3 more)
(+28 files in other folders)
